style(_font-awesome) add font
add font Roboto

Close

--- a/assets/scss/base/_font-awesome.scss
+++ b/assets/scss/base/_font-awesome.scss
@@ -57,3 +57,17 @@
   font-family: 'Font Awesome 5 Free';
   font-weight: 900;
 }
+
+// Roboto T
+@font-face {
+  font-family: 'Roboto-Thin';
+  src: url('Roboto-Thin.eot');
+  src: url('Roboto-Thin.eot?#iefix') format('embedded-opentype'),
+  url('Roboto-Thin.svg#Roboto-Thin') format('svg'),
+  url('Roboto-Thin.ttf') format('truetype'),
+  url('Roboto-Thin.woff') format('woff'),
+  url('Roboto-Thin.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
