--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -52,3 +52,17 @@ $info-phone: "only screen and (max-width : 767px)";
 $info-phone-4: "only screen and (max-width : 320px)";
 
 $primary-green: #0eb493;
+$orange: rgb(200, 145, 59);
+$orange-dark: rgb(201, 146, 59);
+$orange-light: rgb(218, 178, 121);
+$color-start: rgb(218, 178, 121);
+$dark-grey: rgb(64, 64, 64);
+$color-border-button-grey: rgb(225, 225, 225);
+$medium-grey: rgb(235, 235, 235);
+$light-grey: rgb(255, 255, 255);
+$color-text-grey: rgb(137, 137, 137);
+$color-text-light-grey: rgb(145, 145, 145);
+$color-background-facebook: rgb(76, 110, 169);
+$color-background-google: rgb(255, 88, 56);
+$color-background-youtube: rgb(220, 56, 51);
+
