--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -2,7 +2,8 @@
 
 html, body {
   font-size: 16px;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  font-weight: 100;
   -webkit-font-smoothing: antialiased;
   @media #{$info-tablet-horizontal} {
     font-size: 15px;
