--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,8 +1,153 @@
-.nav {
-  @media #{$info-phone} {
-
+.navbar {
+  background-color: $grey-dark;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  border: 0;
+  z-index: 3;
+  height: 100px;
+  @media #{$info-phone}{
+    height: 80px;
   }
-  @media screen and (max-width: 767px){
+
+  // Container begin
+  .container {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    text-align: center;
+    font-size: 13px;
+    flex-wrap: wrap;
+
+    @media #{$info-phone}{
+      align-items: center;
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+
+    // Logo
+    .inner__brand {
+      display: block;
+      img {
+        margin-top: 8px;
+        @media #{$info-phone}{
+          height: 64px;
+        }
+      }
+    }
+
+    // Hamburger button show/hidden when change size device/desktop
+    .inner__toggle {
+      position: absolute;
+      padding: 0;
+      top: 10px;
+      -webkit-transform: translate(-15%);
+      transform: translate(-15%);
+      right: 10px;
+      height: 35px;
+      width: 35px;
+      background: none;
+      border: none;
+      outline: none;
+      z-index: 1;
+      display: none;
+      color: $color-default-lightest;
+      @media #{$info-phone}{
+        display: block;
+        opacity: 0.5;
+        font-size: 15px;
+      }
+    }
+
+    // Inner collapse
+    .inner__collapse {
+      text-transform: uppercase;
+      font-weight: 500;
+      font-size: 16px;
+      margin-top: 45px;
+      display: block;
+      z-index: 1;
+      @media #{$info-phone}{
+        display: none;
+        font-size: 13px;
+        flex-flow: column;
+        position: absolute;
+        align-items: center;
+        top: 0;
+        right: 0;
+        background: $color-default-darker;
+      }
+      a {
+        padding: 45px 10px 36px 10px;
+        position: relative;
+        &:not(:first-child) {
+          margin-left: 20px;
+        }
+        &:hover, &.active {
+          &::after {
+            @include line(100%, 4px, $orange-dark, $orange-light);
+            bottom: 0;
+            left: 0;
+            @media #{$info-phone}{
+              display: none;
+            }
+          }
+        }
+      }
+
+      @media #{$info-phone}{
+        &.show{
+          margin-top: 80px;
+          display: block;
+          width: 70%;
+          a {
+            width: 100%;
+            display: flex;
+            margin: 0;
+            padding: 20px;
+            justify-content: center;
+
+            &.active::before{
+              height: 0;
+            }
+
+            &.active:hover{
+              background-color: $orange-dark;
+            }
+          }
+        }
+      }
+
+    }
+
+    // Inner search
+    .inner__search {
+      display: block;
+      margin-top: 45px;
+
+      input {
+        &:focus-visible {
+          outline: none;
+        }
+        width: 150px;
+        padding: 12px 20px;
+        margin-right: 10px;
+        display: none;
+        @include border-radius-custom(1px, $grey-dark, $color-default, $grey-dark, 50px);
+        &.active {
+          display: inline-block;
+        }
+        @media #{$info-phone}{
+          width: 70%;
+          display: inline-block;
+        }
+      }
+      @media #{$info-phone}{
+        width: 100%;
+      }
+    }
+
 
   }
 }
