--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -5,7 +5,6 @@
   position: relative;
   padding-left: 15px;
   padding-right: 15px;
-
 }  // Container end
 
 // Resolve social icon
@@ -35,7 +34,8 @@
     &.slick-dots {
       bottom: 0;
       li {
-        margin-bottom: 15px;
+        margin-right: 10px;
+        margin-left: 0;
         padding: 0;
         width: 10px;
         height: 10px;
@@ -43,8 +43,8 @@
           &::before {
             font-size: 0;
             opacity: 0.8;
-            width: 6px;
-            height: 6px;
+            width: 8px;
+            height: 8px;
             border-radius: 50%;
             margin: 0;
           }
