--- a/assets/scss/page/_banner.scss
+++ b/assets/scss/page/_banner.scss
@@ -1,19 +1,104 @@
 .home {
-
-  .home__content {
+  // Container
+  .container {
+    //test
+/*    width: 100%;
+    height: 900px;*/
+    //end test
+    text-transform: uppercase;
     z-index: 1;
-    position: absolute;
-    text-align: center;
     color: $color-default-lightest;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    top: 460px;
+    .home__content {
+      width: 600px;
+      top: 316px;
+      font-size: 60px;
+      position: absolute;
+      p {
+        font-weight: 300;
+      }
+      @media #{$info-phone}{
+        width: 300px;
+        top: 200px;
+        font-size: 46px;
+      }
+    }
+    .home__toBottom {
+      top: 654px;
+      position: absolute;
+      right: 15px;
+      @media #{$info-phone}{
+        top: 490px;
+      }
+      .toBottom__content {
+        display: block;
+        font-size: 14px;
+        font-weight: 500;
+        text-transform: uppercase;
+        line-height: 20px;
+        margin-bottom: 52px;
+        -moz-transform: translate(-50%, -50%) rotate(-90deg) translateY(67px);
+        -webkit-transform: translate(-50%, -50%) rotate(-90deg) translateY(67px);
+        transform: translate(-50%, -50%) rotate(-90deg) translateY(67px);
+        @media #{$info-phone}{
+          margin-bottom: 39px;
+        }
+      }
+      .toBottom__img {
+        display: block;
+        float: right;
+      }
+    }
   }
+
   .home__background {
-    background-size: cover ;
-    background-position: center;
-    height: 900px;
+    position: relative;
+    &.slick-slider {
+      margin-bottom: 0;
+      ul{
+        transform: translate(0, -102px);
+        text-align: left;
+        width: 200px;
+        margin: 0 auto;
+        padding-left: 15px;
+        padding-right: 15px;
+        &.slick-dots {
+          @media #{$info-phone}{
+            bottom: -40px;
+          }
+          li {
+            @media #{$info-phone}{
+              display: inline-block;
+            }
+            button{
+              width: 0;
+              height: 0;
+              &::before {
+                border: 1px solid $color-default-lightest;
+              }
+            }
+
+            &.slick-active {
+              button::before{
+                background-color: $color-default-lightest;
+              }
+              @media #{$info-phone}{
+                button::before {
+                  background-color: $color-default-lightest;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    .home__background__item {
+      background-size: cover ;
+      background-position: center;
+      height: 900px;
+      @media #{$info-phone}{
+        height: 700px;
+      }
+    }
   }
 
 }
