style(_mixins, _header, _banner) add mixin for line simple color and multi color, change top in banner
 add mixin for line simple color and multi color in _mixins
change top for home_toBottom  in _banner

Close

--- a/assets/scss/helpers/_mixins.scss
+++ b/assets/scss/helpers/_mixins.scss
@@ -528,10 +528,19 @@
 }
 
 // draw line linear gradient
-@mixin line($width, $thickness, $color-start, $color-end) {
+@mixin line-multi-color($width, $thickness, $color-start, $color-end) {
   content: "";
   width: $width;
   height: $thickness;
   background-image: linear-gradient(to right, $color-start, $color-end);
+  position: absolute;
+}
+
+// draw line linear
+@mixin line-simple-color($width, $thickness, $color) {
+  content: "";
+  width: $width;
+  height: $thickness;
+  color: $color;
   position: absolute;
 }
