--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -86,7 +86,7 @@
         }
         &:hover, &.active {
           &::after {
-            @include line(100%, 4px, $orange-dark, $orange-light);
+            @include line-multi-color(100%, 4px, $orange-dark, $orange-light);
             bottom: 0;
             left: 0;
             @media #{$info-phone}{
@@ -107,7 +107,6 @@
             margin: 0;
             padding: 20px;
             justify-content: center;
-
             &.active::before{
               height: 0;
             }
