--- a/assets/scss/helpers/_mixins.scss
+++ b/assets/scss/helpers/_mixins.scss
@@ -541,6 +541,6 @@
   content: "";
   width: $width;
   height: $thickness;
-  color: $color;
+  background-color: $color;
   position: absolute;
 }
