--- a/assets/scss/page/_banner.scss
+++ b/assets/scss/page/_banner.scss
@@ -1,10 +1,6 @@
 .home {
   // Container
   .container {
-    //test
-/*    width: 100%;
-    height: 900px;*/
-    //end test
     text-transform: uppercase;
     z-index: 1;
     color: $color-default-lightest;
@@ -22,6 +18,8 @@
         font-size: 46px;
       }
     }
+
+    // Resolve toBottom button
     .home__toBottom {
       top: 680px;
       position: absolute;
@@ -47,54 +45,54 @@
         display: block;
         float: right;
       }
-    }
-  }
+    } // End resolve
+  } // End resolve container
 
   .home__background {
     position: relative;
-    &.slick-slider {
-      margin-bottom: 0;
-      ul{
-        transform: translate(0, -102px);
-        text-align: left;
-        width: 200px;
-        padding-left: 15px;
-        padding-right: 15px;
-        &.slick-dots {
-          @media #{$info-phone}{
-            bottom: -40px;
-          }
-          li {
+    // Resolve slick dotted
+    &.slick-dotted {
+      &.slick-slider {
+        margin-bottom: 0;
+        ul{
+          transform: translate(0, -102px);
+          text-align: left;
+          width: 200px;
+          padding-left: 15px;
+          padding-right: 15px;
+          &.slick-dots {
             @media #{$info-phone}{
-              display: inline-block;
+              bottom: -40px;
             }
-            button{
-              width: 0;
-              height: 0;
-              &::before {
-                border: 1px solid $color-default-lightest;
-              }
-            }
-
-            &.slick-active {
-              button::before{
-                background-color: $color-default-lightest;
-              }
+            li {
               @media #{$info-phone}{
-                button::before {
+                display: inline-block;
+              }
+              button{
+                width: 0;
+                height: 0;
+                &::before {
+                  border: 1px solid $color-default-lightest;
+                }
+              }
+
+              &.slick-active {
+                button::before{
                   background-color: $color-default-lightest;
+                }
+                @media #{$info-phone}{
+                  button::before {
+                    background-color: $color-default-lightest;
+                  }
                 }
               }
             }
           }
         }
-
-        &::after {
-          @include line-simple-color( 3px, 14px, $orange-dark );
-        }
       }
-
+      // Resolve background__item
     }
+
     .home__background__item {
       background-size: cover ;
       background-position: center;
@@ -102,15 +100,17 @@
       @media #{$info-phone}{
         height: 700px;
       }
-    }
+    } // End Resolve
   }
 
+  // Control position of buttons group
   .buttons {
     display: inline-block;
     transform: translate(135px, -116px);
     @media #{$info-phone}{
       transform: translate(135px, -76px);
     }
+
     svg {
       color: $orange-dark;
       font-size: 14px;
@@ -121,5 +121,4 @@
       display: none;
     }
   }
-
 }
