--- a/assets/scss/page/_about.scss
+++ b/assets/scss/page/_about.scss
@@ -1,11 +1,11 @@
 .about {
-  padding-top: 90px;
   display: flex;
   flex-direction: row;
   position: relative;
-  padding-left: 15px;
-  padding-right: 15px;
+
   .about__content {
+    padding: 90px 0 100px 15px;
+    position: relative;
     &.title {
       &::before{
         @include line-simple-color(945px, 4px, $color-line-grey);
@@ -14,23 +14,31 @@
     }
     .content {
       font-weight: 300;
-      max-width: 570px;
+      width: 570px;
+      margin-bottom: 32px;
       h5 {
         font-size: 24px;
-        margin-bottom: 30px;
+        margin-bottom: 27px;
       }
       p {
         font-size: 14px;
+        line-height: 24px;
       }
     }
+    .btn__see__more {
+      out-line: none;
+      border: none;
+      padding: 14px 60px;
+      @include border-radius-custom(0, $grey-dark, $grey-dark, $color-start, 50px);
+    }
   }
-
-
   .about__image {
+    width: 45.57%;
     max-width: 875px;
-    height: 620px;
+    height: 100%;
     background-size: cover;
-    background-position: right;
+    position: absolute;
+    right: 0;
   }
 
 
