--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -4,7 +4,7 @@ html {
 
 // Container begin
 .container {
-  max-width: 1200px;
+  max-width: 1140px;
   margin: 0 auto;
   position: relative;
   padding-left: 15px;
@@ -60,21 +60,35 @@ html {
 
 // Resolve title
 .title {
-  h4 {
-    font-size: 48px;
-    font-weight: 300;
-    color: $color-default-darkest;
-    margin-bottom: 60px;
-    @media #{$info-phone}{
-      font-size: 36px;
-    }
-    &::after{
-      @include line-simple-color(170px, 4px, $orange-dark);
-      top: 176px;
-    }
+  font-size: 48px;
+  font-weight: 400;
+  margin-bottom: 60px;
+  @media #{$info-phone}{
+    font-size: 36px;
   }
-
+  &::after{
+    @include line-simple-color(170px, 4px, $orange-dark);
+    top: 176px;
+  }
+  &::before{
+    @include line-simple-color(945px, 4px, $color-line-grey);
+    top: 176px;
+  }
 }  // End resolve
+
+// Resolve content above title
+.content {
+    h5 {
+      font-size: 24px;
+      margin-bottom: 27px;
+      font-weight: 400;
+    }
+    p {
+      font-size: 14px;
+      line-height: 24px;
+      font-weight: 400;
+    }
+}
 
 // Resolve button
 .btn {
@@ -82,8 +96,23 @@ html {
   font-size: 14px;
   font-weight: 600;
   text-transform: uppercase;
+  outline: none;
+  border: none;
   &:hover {
     cursor: pointer;
     opacity: 0.5;
+  }
+}
+
+// Control position of buttons group
+.buttons {
+  display: inline-block;
+  svg {
+    color: $orange-dark;
+    font-size: 14px;
+    transform: translateY(-2px);
+  }
+  .play {
+    display: none;
   }
 }
