--- a/assets/scss/page/_about.scss
+++ b/assets/scss/page/_about.scss
@@ -7,27 +7,16 @@
     padding: 90px 0 100px 15px;
     position: relative;
     &.title {
-      &::before{
-        @include line-simple-color(945px, 4px, $color-line-grey);
-        top: 176px;
+      &::after {
+        left: 15px;
       }
+
     }
     .content {
-      font-weight: 300;
-      width: 570px;
+      width: 520px;
       margin-bottom: 32px;
-      h5 {
-        font-size: 24px;
-        margin-bottom: 27px;
-      }
-      p {
-        font-size: 14px;
-        line-height: 24px;
-      }
     }
     .btn__see__more {
-      out-line: none;
-      border: none;
       padding: 14px 60px;
       @include border-radius-custom(0, $grey-dark, $grey-dark, $color-start, 50px);
     }
@@ -40,6 +29,4 @@
     position: absolute;
     right: 0;
   }
-
-
 }
