--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -62,6 +62,7 @@ $grey-medium: rgb(235, 235, 235);
 $grey-light: rgb(255, 255, 255);
 $color-text-grey: rgb(137, 137, 137);
 $color-text-grey-light: rgb(145, 145, 145);
+$color-box-shadow: rgb(212, 212, 212);
 $color-line-grey: rgb(229, 229, 229);
 $color-background-facebook: rgb(76, 110, 169);
 $color-background-google: rgb(255, 88, 56);
